change color background to red

--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <html>
-<body bgcolor=black>
+<body bgcolor=red>
 <center>
 <h2><font color=yellow> Zdarova Vlad from vlad eeeee </font></h2>
+<h2><font color=yellow> Here we go - deploy from github </font></h2>
+
 <font color=blue>www.kjjjjj.net</font>
 </center>
 </body>
