color from red to grey

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-<body bgcolor=red>
+<body bgcolor=grey>
 <center>
 <h2><font color=yellow> Zdarova Vlad from vlad eeeee </font></h2>
 <h2><font color=yellow> Here we go - deploy from github </font></h2>
